Add visulization Script

--- a/src/awa2/mnetv1/main.ipynb
+++ b/src/awa2/mnetv1/main.ipynb
@@ -1255,7 +1255,6 @@
     "log_file = open(\"./logs/training_logs.csv\", \"a\", newline=\"\")\n",
     "csv_writer = csv.writer(log_file)\n",
     "csv_writer.writerow([\"epoch\", \"train_loss\", \"train_acc\", \"val_loss\", \"val_acc\"])\n",
-    "csv_writer.writerow([\"epoch\", \"train_loss\", \"train_acc\", \"val_loss\", \"val_acc\"])\n",
     "\n",
     "\n",
     "def loop_fn(mode, dataset, dataloader, model, criterion, optimizer):\n",
@@ -1282,13 +1281,24 @@
     "    return loss, accuracy\n",
     "\n",
     "num_epochs = 30\n",
-    "for epoch in range(num_epochs):\n",
+    "for epoch in range(1, num_epochs + 1):\n",
     "    train_cost, train_score = loop_fn('train', train_set, train_loader, model, criterion, optimizer)\n",
     "    with torch.no_grad():\n",
     "        test_cost, test_score = loop_fn('val', val_set, val_loader, model, criterion, optimizer)\n",
     "    print(epoch, float(train_cost), train_score, float(test_cost), test_score)\n",
     "    csv_writer.writerow([epoch, float(train_cost), train_score, float(test_cost), test_score])\n",
     "    torch.save(model.state_dict(), f\"./logs/models/model_e{epoch}.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    test_cost, test_score = loop_fn('val', test_set, test_loader, model, criterion, optimizer)\n",
+    "print(f\"Testing Loss = {test_cost}, Accuracy = {test_cost}\")"
    ]
   }
  ],
